# lila-gif

./: .gitignore  Cargo.toml  README.md  lishogi-deploy.sh
src/: api.rs  main.rs  render.rs  theme.rs
theme/: make-sprite.py  pieces.py
