[package]
name = "lila-gif"
version = "0.1.0"
publish = false
description = "Webservice to render gifs of shogi positions and games"
repository = "https://github.com/niklasf/lila-gif"
readme = "README.md"
license = "AGPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>", "Wanderer - modified for lishogi"]
categories = ["games", "multimedia"]
keywords = ["shogi", "gif"]
edition = "2018"

[dependencies]
warp = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
shogi = "0.10"
serde_with = "1"
ndarray = "0.15"
bytes = "1"
arrayvec = { version = "0.7", features = ["serde"] }
clap = "3.0.0-beta.2"
gift = "0.10"
tokio-stream = "0.1"

[patch.crates-io]
shogi = { git  = "https://github.com/WandererXII/shogi-rs" }
